[package]
name = "hello_world"
version = "0.1.0"
authors = ["Li Zhuohua <lizhuohua1994@gmail.com>"]
edition = "2018"

[lib]
name = "psmouse"
#crate-type = ["cdylib"]      # Creates dynamic lib
crate-type = ["staticlib"] # Creates static lib

[dependencies]
linux-kernel-module = { path = ".." }

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"
