[package]
name = "psmouse"
version = "0.1.0"
authors = ["Nitheesh Prakash, Shriram Raja, Sairam Ganti"]
edition = "2021"

[lib]
name = "psmouse"
#crate-type = ["cdylib"]      # Creates dynamic lib
crate-type = ["staticlib"] # Creates static lib

[dependencies]
linux-kernel-module = { path = ".." }

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"
